--- a/style.css
+++ b/style.css
@@ -6,39 +6,41 @@ img {
   position: relative;
 }
 
-/*#Facedown-Card {
-  width: 75.7969px;
-  height: 100px;
-  position: relative;
-}*/
-
-/*#Bankroll {
-  width: 50px;
-  height: 100px
-  display: inline;
-  bottom: 30px;
-  position: absolute;
-  box-sizing: border-box;
-  margin: 0 auto;
-  border: 5px solid black;
-}*/
-
 h1 {
   color: white;
-  position: relative;
-  text-align: right;
-}
-
-h2 {
-  color: white;
-  text-align: right;
 }
 
 p {
   color: white;
   font-size: 25px;
-  position: relative;
+}
+
+#Dealers-Sum {
   text-align: right;
+  position: relative;
+  top: 30px;
+  right: 75px
+}
+
+#Your-Sum {
+  text-align: right;
+  position: relative;
+  top: 120px;
+  right: 75px
+}
+
+#Bet {
+  text-align: right;
+  position: relative;;
+  top: 60px;
+  right: 75px
+}
+
+#Bankroll {
+  text-align: right;
+  position: relative;
+  top: 90px;
+  right: 75px
 }
 
 #Player-Hand {
@@ -63,4 +65,23 @@ p {
   margin: 0 auto;
   left: 0;
   right: 0;
+}
+
+#Game-Over-Button {
+  background-color: rgb(150, 0, 0);
+  width: 200px;
+  height: 75px;
+  position: absolute;
+  display: block;
+  top: 275px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  border-radius: 10px;
+}
+
+#Game-Over-Button > h1 {
+  color: black;
 }
