--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-  background-color: #006600;
+  background-image: url("http://www.casino-sidan.se/images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 img {
@@ -17,38 +19,33 @@ p {
 
 #Dealers-Sum {
   text-align: right;
-  position: relative;
   top: 30px;
-  right: 75px
+  right: 0;
+  color: black;
 }
 
 #Bankroll {
   text-align: right;
-  position: relative;
-  top: 90px;
-  right: 75px
+  display: inline-block;
 }
 
 #Bet {
   text-align: right;
-  position: relative;;
-  top: 60px;
-  right: 75px
+  display: inline-block;
 }
 
 #Your-Sum {
   text-align: right;
-  position: relative;
   top: 120px;
-  right: 75px
+  right: 0;
+  color: black;
 }
 
 #Player-Hand {
-  width: 700px;
+  max-width: 700px;
   height: 200px;
-  position: absolute;
-  display: block;
-  bottom: 30px;
+  position: relative;
+  bottom: 5%;
   box-sizing: border-box;
   margin: 0 auto;
   left: 0;
@@ -56,32 +53,57 @@ p {
 }
 
 #Dealer-Hand {
-  width: 700px;
+  max-width: 700px;
   height: 200px;
   position: absolute;
-  display: block;
-  top: 30px;
+  top: 5%;
   box-sizing: border-box;
   margin: 0 auto;
   left: 0;
   right: 0;
 }
 
-#Game-Over-Button {
+.buttons {
+  max-height: 150px;
+  text-align: center;
+}
+
+.Game-Over-Button {
+  max-width: 200px;
+  max-height: 100px;
   background-color: rgb(150, 0, 0);
-  width: 200px;
-  height: 75px;
-  position: absolute;
-  display: block;
-  top: 275px;
-  box-sizing: border-box;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
   text-align: center;
   border-radius: 10px;
 }
 
-#Game-Over-Button > h1 {
+.Hit-Button {
+  max-width: 200px;
+  max-height: 100px;
+  background-color: rgb(150, 0, 0);
+  text-align: center;
+  border-radius: 10px;
+}
+
+.Stand-Button {
+  max-width: 200px;
+  max-height: 100px;
+  background-color: rgb(150, 0, 0);
+  text-align: center;
+  border-radius: 10px;
+}
+
+.betting {
+  text-align: center;
+}
+
+.col-xs-4 {
+  max-width: 30%;
+  top: 250px;
   color: black;
+  max-height: 100px;
+  padding-bottom: 75px;
+}
+
+.row {
+  max-width: 100%;
 }
